toList -> collect 수정 (jdk 16 관련)